--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <h1>Our Teachers</h1>
         <div id="teacher-parents">
           <div>
-            <img
+            <img class="t"
               src="https://livedemo00.template-help.com/wt_48443/images/box-nina-img-01-270x270.jpg"
               alt="This is an image of a teacher"
             />
@@ -153,7 +153,7 @@
             </p>
           </div>
           <div>
-            <img
+            <img class="t"
               src="https://livedemo00.template-help.com/wt_48443/images/box-nina-img-02-270x270.jpg"
               alt="This is an image of a teacher"
             />
@@ -164,7 +164,7 @@
             </p>
           </div>
           <div>
-            <img
+            <img class="t"
               src="https://livedemo00.template-help.com/wt_48443/images/box-nina-img-3-270x270.jpg"
               alt="This is an image of a teacher"
             />
@@ -175,7 +175,7 @@
             </p>
           </div>
           <div>
-            <img
+            <img class="t"
               src="https://livedemo00.template-help.com/wt_48443/images/box-nina-img-4-270x270.jpg"
               alt="This is an image of a teacher"
             />
